todoapps/karakeep/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: karakeep
  namespace: karakeep
spec:
  selector:
    app: karakeep
  ports:
  - name: http
    port: 3000
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
