todoapps/karakeep/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: karakeep-ingress
  namespace: karakeep
spec:
  ingressClassName: tailscale
  rules:
    - host: karakeep
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: karakeep
                port:
                  number: 3000
  tls:
    - hosts:
        - karakeep
